--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ h6 {
 :root {
     --background-primary: #e2e8f0;
     --background-secondary: #f9fafb;
+    --background-button: #38bdf8;
 
     --text-primary: #334155;
 }
@@ -45,6 +46,21 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 1rem;
+}
+
+.toolbar > button {
+    background-color: var(--background-button);
+    border: none;
+    border-radius: 4px;
+    padding: 0.5rem;
+    cursor: pointer;
+    transition: 0.1s ease-in-out;
+}
+
+.toolbar > button:hover {
+    color: white;
+    transform: scale(1.05);
 }
 
 .grid-item {
@@ -55,6 +71,12 @@ h1 {
 .hover {
     background-color: red;
     transition: none;
+}
+
+.grid-size-input {
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
 }
 
 .grid {
