--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
+    gap: 2.5rem;
 }
 
 .toolbar > button {
@@ -84,11 +84,21 @@ h1 {
     transition: none;
 }
 
+.rgb-input > input {
+    min-height: 1.5rem;
+    cursor: pointer;
+    transition: 0.1s ease-in-out;
+}
+
+.rgb-input > input:hover {
+    transform: scale(1.1);
+}
+
 .grid-size-input,
 .rgb-input {
     display: flex;
     flex-direction: column;
-    gap: 0.2rem;
+    gap: 0.3rem;
 }
 
 .grid {
